# moss

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Package.swift  README.md  ROADMAP.md  SECURITY.md  TODOS.md  demo_auto_id.py  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
apps/agora-moss/: Dockerfile  README.md  create_index.py  env.example  llm_proxy.py  moss_docs.json  pyproject.toml  server.py  start_agent.py  test_mcp_client.py  test_mcp_client_remote.py
apps/agora-moss/tests/: test_start_agent.py
apps/elevenlabs-moss/: README.md  create_index.py  elevenlabs_bot.py  env.example  pyproject.toml
apps/moss-voice-speed/: .env.example  .gitignore  README.md  bot.py  create_index.py  moss_speed_retrieval.py  pyproject.toml
apps/pipecat-moss/hume-ollama-local/: Dockerfile  README.md  docker-compose.yml  env.example  fetch_voice.py  hume_ollama_bot.py  ollama_bot.py  pyproject.toml  tada_tts.py
apps/pipecat-moss/ollama-local/: Dockerfile  README.md  bot.py  env.example  ollama_bot.py  pyproject.toml
apps/pipecat-moss/pipecat-quickstart/: README.md  create-index.py  pyproject.toml
apps/vapi-moss/: README.md  create_index.py  env.example  pyproject.toml  server.py
examples/cookbook/agentphone/: .env.example  .gitignore  README.md  create_index.py  moss_agentphone.py  pyproject.toml  railway.json  server.py  test_integration.py
examples/cookbook/crewai/: .env.example  README.md  example_usage.py  moss_crewai.py  pyproject.toml  test_live.py
examples/cookbook/crewai/data/: destinations_moss.json
examples/cookbook/daytona/: .env.example  README.md  log_agent.py  log_ingest.py  mock_logs.py  pyproject.toml  requirements.txt
examples/cookbook/e2b/: .env.example  README.md  code_agent.py  code_index.py  pyproject.toml  sandbox_runner.py  test_integration.py
examples/cookbook/e2b/sample_project/: pyproject.toml
examples/cookbook/firecrawl/: .env.example  README.md  firecrawl_moss.ipynb  pyproject.toml
examples/cookbook/firecrawl/.ipynb_checkpoints/: firecrawl_moss-checkpoint.ipynb
examples/cookbook/google-adk/: .env.example  README.md  agent.py  demo.py  moss_adk.py  moss_adk_demo.py  moss_adk_tool.py  pyproject.toml  test_integration.py  voice_demo.py
examples/cookbook/google-adk/moss_agent/: agent.py  moss_search.py
examples/cookbook/haystack/: .env.example  README.md  example_usage.py  moss_haystack.py  pyproject.toml  test_live.py
examples/cookbook/haystack/data/: general_knowledge.json  personal_habits.json
examples/cookbook/langflow/: README.md  moss_langflow.py  pyproject.toml  test_integration.py
examples/cookbook/langgraph/: .env.example  README.md  create_index.py  example_usage.py  moss_langgraph.py  pyproject.toml  test_integration.py
examples/cookbook/moss-cognee-daytona/: .env.example  PORTAL_QUICKSTART.md  README.md  main.py  pyproject.toml
examples/cookbook/multi-tenant/: .env.example  README.md  agent.py  moss_multitenant.py  pyproject.toml
examples/cookbook/multi-tenant/data/: health_vitacare.json  law_firm.json  pizza_shop.json  retail_urban_threads.json  saas_company.json
examples/cookbook/openai-agents/: .env.example  README.md  example.py  example_usage.py  moss_openai_agents.py  pyproject.toml  test_example.py  test_live.py
examples/cookbook/openai-agents/data/: activities_moss.json  stays_moss.json
examples/cookbook/pydantic-ai/: .env.example  README.md  example.py  moss_pydantic_ai.py  pyproject.toml  test_integration.py
examples/cookbook/sim/: .env.example  README.md  example_index.py  pyproject.toml  requirements.txt  server.py
examples/cookbook/sim/docs/: faq.md
examples/cookbook/smolagents/: .env.example  README.md  env.example  moss_smol_agent_demo.py  moss_smolagents.py  pyproject.toml  smolagents_retrieval.py  test_integration.py  tool.py
examples/cookbook/unstructured/: .env.example  README.md  ingest.py  pyproject.toml  test_integration.py
examples/cookbook/unstructured/sample_docs/: onboarding.html  release-notes.txt
examples/python-moss-agent/: .env.example  README.md  agent.py  create_indexes.py  pyproject.toml
examples/python-moss-agent/data/: faq.json  policies.json  product_catalog.json
examples/voice-agents/airline-pnr/: .env.example  .gitignore  README.md  agent.py  create_indexes.py  pyproject.toml
examples/voice-agents/airline-pnr/data/: pnr_mr5xbp.json  pnr_wj7bnh.json  pnr_xkq4p2.json
examples/voice-agents/airline-pnr/evals/: test_call_summary.py
examples/voice-agents/candidate-screening/: .env.example  .gitignore  README.md  agent.py  create_indexes.py  pyproject.toml
examples/voice-agents/candidate-screening/data/: candidate_junior_reach.json  candidate_partial_match.json  candidate_strong_match.json  job_senior_backend_payments.json
examples/voice-agents/candidate-screening/evals/: test_scorecards.py
examples/voice-agents/insurance-adjuster/: .env.example  README.md  agent.py  create_indexes.py  pyproject.toml
examples/voice-agents/insurance-adjuster/claim-reports/: fl-ho3-001__1782803656.json  tx-ho3-003__1782297440.json  tx-ho3-003__1782297729.json  unknown__1782295041.json
examples/voice-agents/insurance-adjuster/data/: claims_kb.json
examples/voice-agents/insurance-adjuster/ingest/: chunk.py  crawl.py
examples/voice-agents/insurance-adjuster/ui/: .env.example  next.config.ts  package-lock.json  package.json
examples/voice-agents/mortgage-lending/: .env.example  README.md  agent.py  create_index.py  mortgage_kb.json  pyproject.toml
sdks/python/: Cargo.toml  README.md  pyproject.toml
sdks/python/bindings/: Cargo.toml  README.md  pyproject.toml
sdks/python/bindings/src/: indexmanager.rs  lib.rs  models.rs
sdks/python/sdk/: CHANGELOG.md  README.md  pyproject.toml
sdks/python/sdk/tests/: __init__.py  conftest.py  constants.py  test_client.py  test_client_extended.py  test_cloud_fallback.py  test_create_index_versions.py  test_device_id.py  test_e2e.py  test_types.py  (+7 more)
sdks/python/src/: index.rs  indexmanager.rs  lib.rs  models.rs  utils.rs
sdks/python/tests/: test_embedding.py  test_smoke.py
(+1111 files in other folders)
