[project]
name = "agora-moss-demo"
version = "0.0.1"
description = "Demo: Moss-powered Agora Conversational AI voice agent via MCP"
readme = "README.md"
license = { text = "BSD-2-Clause" }
requires-python = ">=3.10,<3.15"
dependencies = [
    "agora-moss",
    "agora-token-builder>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "fastapi>=0.136.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=8.0",
]

[tool.uv.sources]
agora-moss = { path = "../../packages/agora-moss" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D101", "D102", "D103", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"
