[package]
name = "moss-core-py"
version = "0.8.0"
edition = "2024"
license = "Proprietary"
publish = false
description = "Proprietary core index logic for Moss (Python extension module)"
repository = "https://github.com/usemoss/moss"

[lib]
name = "moss_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
moss = { path = "../.." }
serde = { version = "1.0.226", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
