[build-system]
requires = ["maturin>=1.6,<2"]
build-backend = "maturin"

[project]
name = "inferedge-moss-core"                # PyPI distribution name
version = "0.8.0"                      # keep in sync with tags or CI bump
description = "Proprietary core index logic for Moss"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "SEE LICENSE IN LICENSE" }
authors = [{ name = "InferEdge, Inc." }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/usemoss/moss"
Issues = "https://github.com/usemoss/moss/issues"

[tool.maturin]
# Must match [lib].name above so the Python import is `import moss_core`
module-name = "moss_core"
# Include license and README in distribution
include = ["README.md", "LICENSE"]
