[project]
name = "pipecat-ollama-local"
version = "0.1.0"
description = "Voice AI bot with local LLM (Ollama) + Moss semantic retrieval"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[webrtc,daily,silero,deepgram,openai,cartesia,runner]",
    "pipecat-ai-cli",
    "pipecat-moss>=0.0.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
