[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentphone-moss-cookbook"
version = "0.1.0"
description = "AgentPhone tool-calling webhook cookbook for Moss semantic search"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "InferEdge Inc.", email = "contact@moss.dev" }
]
dependencies = [
    "moss>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
py-modules = ["server", "moss_agentphone", "test_integration"]
