[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haystack-moss"
version = "0.1.0"
description = "Haystack integration for Moss semantic search"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "InferEdge Inc.", email = "contact@moss.dev" }
]
dependencies = [
    "haystack-ai",
    "moss>=1.0.0",
    "python-dotenv",
]

[tool.hatch.build.targets.wheel]
packages = ["moss_haystack.py"]

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "moss_haystack.py",
]
