[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-moss"
version = "0.1.0"
description = "LangGraph cookbook example for Moss retrieval"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "InferEdge Inc.", email = "contact@moss.dev" }
]
dependencies = [
    "langgraph>=0.2",
    "langchain-groq",
    "moss>=1.0.0b19",
    "python-dotenv",
]

[tool.hatch.build.targets.wheel]
packages = ["create_index.py", "moss_langgraph.py", "test_integration.py"]

[tool.hatch.build.targets.sdist]
include = [
    ".env.example",
    "README.md",
    "create_index.py",
    "moss_langgraph.py",
    "test_integration.py",
]
