[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-agents-moss-cookbook"
version = "0.1.0"
description = "OpenAI Agents cookbook example for Moss semantic search"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "InferEdge Inc.", email = "contact@moss.dev" }
]
dependencies = [
    "moss>=1.1.1",
    "openai-agents>=0.1.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
py-modules = ["example"]
