[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-ai-moss-cookbook"
version = "0.1.0"
description = "Pydantic AI cookbook example for Moss semantic search"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "InferEdge Inc.", email = "contact@moss.dev" }
]
dependencies = [
    "moss>=1.0.0",
    "pydantic-ai>=0.8.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["moss_pydantic_ai.py"]

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "moss_pydantic_ai.py",
]
