[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic-ai-moss-cookbook"
version = "0.1.0"
description = "Pydantic AI cookbook example for Moss semantic search"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "InferEdge Inc.", email = "contact@moss.dev" }
]
dependencies = [
    "moss>=1.0.0",
    "pydantic-ai>=0.8.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
py-modules = ["moss_pydantic_ai", "test_integration"]
