[project]
name = "moss-sim-cookbook"
version = "0.0.1"
description = "Moss + sim.ai webhook server example"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "sim-moss>=0.0.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.2.1",
]

[tool.uv]
package = false

[tool.uv.sources]
sim-moss = { path = "../../../packages/sim-moss", editable = true }

[tool.ruff]
line-length = 100
target-version = "py310"
