[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smolagents-moss"
version = "0.1.0"
description = "Smolagents integration for Moss semantic search"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "InferEdge Inc.", email = "contact@moss.dev" }
]
dependencies = [
    "smolagents",
    "moss>=1.0.0",
    "python-dotenv",
]

[tool.hatch.build.targets.wheel]
packages = ["tool.py"]

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "tool.py",
    "moss_smol_agent_demo.py",
    ".env.example",
]
