[project]
name = "unstructured-moss"
version = "0.1.0"
description = "Parse files with Unstructured and index them into Moss"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "InferEdge Inc.", email = "contact@moss.dev" }
]
dependencies = [
    "moss>=1.0.0",
    "python-dotenv>=1.0",
    "unstructured[all-docs]>=0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingest.py"]

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "ingest.py",
    ".env.example",
    "sample_docs/*",
]
