[project]
name = "candidate-screening-voice-agent"
version = "0.1.0"
description = "Live voice screening interview grounded in two Moss indexes (job description + candidate resume)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "moss>=1.0.1",
    "livekit-agents[openai,deepgram,silero,turn-detector,cartesia]>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
